[tool.poetry]
name = "flash-utils"
version = "0.1.0"
description = ""
authors = ["Stefan Weber <stefan.weber93@googlemail.com>"]
readme = "README.md"
packages = [{include = "flash_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
huas-micropythosn = "^0.0.2"
pyserial = "^3.5"
esptool = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
